--- a/src/eda/final.ipynb
+++ b/src/eda/final.ipynb
@@ -1157,8 +1157,8 @@
     "#  5   processor_brand             693 non-null    object   other                   oh\n",
     "#  6   processor_tier              693 non-null    object   other                   numerycznie\n",
     "#  7   num_cores                   693 non-null    int64  \n",
-    "#  8   num_threads                 693 non-null    int64  \n",
-    "#  9   ram_memory                  693 non-null    int64  \n",
+    "#  8   num_threads                 693 non-null    int64                                                                       2 równe 0 ?\n",
+    "#  9   ram_memory                  693 non-null    int64    \n",
     "#  10  primary_storage_type        693 non-null    object                           oh,bin ?             676/17\n",
     "#  11  primary_storage_capacity    693 non-null    int64  \n",
     "#  12  secondary_storage_type      693 non-null    object   No secondary storage    oh,bin ? odrzucic    10/683\n",
