--- a/src/eda/final.ipynb
+++ b/src/eda/final.ipynb
@@ -1151,7 +1151,7 @@
     "#   Column                      Non-Null Count  Dtype       Nulls                  Kodowanie                                   Blady\n",
     "# ---  ------                      --------------  -----    -------                -------                                     ------\n",
     "#  1   brand                       693 non-null    object                           grupowanie,\n",
-    "#  2   Model                       693 non-null    object   useless                 odrzucic\n",
+    "#  2   Model                       693 non-null    object                           odrzucic                                   \n",
     "#  3   Price                       693 non-null    int64   \n",
     "#  4   Rating                      693 non-null    int64  \n",
     "#  5   processor_brand             693 non-null    object   other                   oh\n",
