eda final business idea add

--- a/src/eda/final.ipynb
+++ b/src/eda/final.ipynb
@@ -69,6 +69,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Business Idea:\n",
+    "- We want to create clusters of laptops based on their features.\n",
+    "- This will enable us to develop a recommendation system for customers.\n",
+    "- Then, someone can combine these clusters with customer groups."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a7a19ce3ca80a8e2"
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "644a7262bdaaa2c8",
