--- a/src/km2/Jan.ipynb
+++ b/src/km2/Jan.ipynb
@@ -286,7 +286,7 @@
    "source": [
     "#   Column                      Non-Null Count  Dtype       Nulls                  Kodowanie                                   Blady\n",
     "# ---  ------                      --------------  -----    -------                -------                                     ------\n",
-    "#  1   brand                       693 non-null    object                           grupowanie,\n",
+    "#  1   brand                       693 non-null    object                           grupowanie,oh\n",
     "#  2   Model                       693 non-null    object   useless                 odrzucic\n",
     "#  3   Price                       693 non-null    int64   \n",
     "#  4   Rating                      693 non-null    int64  \n",
@@ -483,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Rozkład ceny"
+    "1. Rozkład ceny - czy jakoś ją przekształcamy?"
    ]
   },
   {
@@ -564,6 +564,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mimo różnych producentów można je uporządkować wg jakości czy ceny, propozycja dobrania odpowiedników poniżej"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 175,
    "metadata": {},
@@ -574,7 +581,7 @@
     "# m1 == core i5\n",
     "# m2 == core i7\n",
     "# core ultra 7 == core i7 | core i9 ?\n",
-    "# pentium == core i5"
+    "# pentium == core i5 | core i3 ?"
    ]
   },
   {
@@ -615,6 +622,7 @@
     }
    ],
    "source": [
+    "# zachowuje informacje o processor_type == 'other' i uzupełniam te pola 0 (do pomyślenia co z tym robic)\n",
     "A = data.processor_tier\n",
     "A[A=='celeron'] = 'core i3'\n",
     "A[A=='pentium'] = 'core i5'\n",
@@ -639,7 +647,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# year_of_warranty"
+    "# Year_of_warranty"
    ]
   },
   {
@@ -648,6 +656,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# zachowuje informacje o year_of_warranty=='No information' i uzupełniam te pola 0 (do pomyślenia co z tym robic)\n",
     "mask_year_of_war_no =df1.year_of_warranty=='No information'\n",
     "df1.loc[mask_year_of_war_no,['year_of_warranty']] = 0\n",
     "df1['year_of_warranty'] = df1['year_of_warranty'].apply(lambda x : int(x))\n",
@@ -889,7 +898,7 @@
    "metadata": {},
    "source": [
     "- opcja 1: zrezygnować z 'secondary_storage_type' na rzecz 'secondary_storage_capacity', bo ta kolumna wynosi 0 gdy nie ma drugiego dysku\n",
-    "- opcja 2: zostawić 'secondary_storage_type' i tam gdzie nie ma dawać 0"
+    "- opcja 2: zostawić 'secondary_storage_type' i tam gdzie nie HDD ma dawać 0"
    ]
   },
   {
@@ -966,6 +975,13 @@
    ],
    "source": [
     "df1.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "na tym etapie nie ma kolumn typu \"object\" ,trzeba się zastanowić czy wszystkie kolumny są konieczne i czy w OHEncodingu dla processor_brand,gpu_brand,brand ilość klas jest wystarczająca (np. że największych 6 brand zostawiamy nazwy a reszcie dajemy other)"
    ]
   },
   {
