--- a/src/feature_engineering/Jan.ipynb
+++ b/src/feature_engineering/Jan.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"modelers_data.csv\")"
+    "data = pd.read_csv(\"../../data/modelers_data.csv\")"
    ]
   },
   {
